[tool.poetry]
name = "door_game"
version = "0.1.0"
description = "Simple Door Game to Practice Python Game Programming"
authors = ["justinb"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
